feat: add documentation for Cart
