# handler/createComputer.go
@@ -13,11 +13,12 @@ import (
 // @Description Create a new computer
 // @Tags Computer
 // @Accept json
-// @Produce json 
+// @Produce json
 // @Param request body CreateComputerRequest true "Request body"
 // @Success 200 {object} CreateComputerResponse
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
+// @Security ApiKeyAuth
 // @Router /computer [post]
 func CreateComputerHandler(ctx *gin.Context) {
 	request := CreateComputerRequest{}
