# handler/response.go
@@ -24,36 +24,46 @@ func SendSuccess(ctx *gin.Context, op string, data interface{}) {
 }
 
 type ErrorResponse struct {
-	Message string `json:"message"`
+	Message   string `json:"message"`
 	ErrorCode string `json:"errorCode"`
 }
 
 type CreateComputerResponse struct {
-	Message string `json:"message"`
-	Data schemas.ComputerResponse `json:"data"`
+	Message string                   `json:"message"`
+	Data    schemas.ComputerResponse `json:"data"`
 }
 
 type ListComputerResponse struct {
-	Message string `json:"message"`
-	Data schemas.ComputerResponse `json:"data"`
+	Message string                   `json:"message"`
+	Data    schemas.ComputerResponse `json:"data"`
 }
 
 type CreateUserResponse struct {
-	Message string `json:"message"`
-	Data schemas.UserResponse `json:"data"`
+	Message string               `json:"message"`
+	Data    schemas.UserResponse `json:"data"`
 }
 
 type CreateLoginResponse struct {
-	Message string `json:"message"`
-	Data schemas.LoginResponse `json:"data"`
+	Message string                `json:"message"`
+	Data    schemas.LoginResponse `json:"data"`
 }
 
 type ListUserResponse struct {
-	Message string `json:"message"`
-	Data schemas.UserResponse `json:"data"`
+	Message string               `json:"message"`
+	Data    schemas.UserResponse `json:"data"`
 }
 
 type CreatePasswordChangeResponse struct {
-	Message string `json:"message"`
-	Data schemas.ChangePasswordResponse `json:"data"`
+	Message string                         `json:"message"`
+	Data    schemas.ChangePasswordResponse `json:"data"`
+}
+
+type ListCartResponse struct {
+	Message string               `json:"message"`
+	Data    schemas.CartResponse `json:"data"`
+}
+
+type CreateCartItemResponse struct {
+	Message string               `json:"message"`
+	Data    schemas.CartResponse `json:"data"`
 }
